  - SPVM::FloatList->newa is rename to new, and original new is removed
  - SPVM::DoubleList->newa is rename to new, and original new is removed
  - SPVM::StringList->newa is rename to new, and original new is removed
  - SPVM::List->newa is rename to new, and original new is removed
  - SPVM::Hash->newa is rename to new, and original new is renamed to new_empty
0.0922 2020-10-12
  - add SPVM::new_byte_array_len
  - add SPVM::new_short_array_len
  - add SPVM::new_int_array_len
  - add SPVM::new_long_array_len
  - add SPVM::new_float_array_len
  - add SPVM::new_double_array_len
  - add SPVM::new_object_array_len
0.0921 2020-10-12
  - fix bug that in exchange api, any object return type is wrong.
0.0920 2020-10-12
  - rename SPVM::get_length to SPVM::length
  - rename SPVM ExchangeAPI get_length to length
0.0919 2020-10-12
  - rename SPVM::ObjectList to SPVM::List because this is maybe Perl to SPVM offten used interface, short name is good.
0.0918 2020-10-07
  - SPVM::Util->rand is renamed to crand because perl rand is different from C rand.
  - add SPVM::Util->rand. This is same as Perl rand(0 <= random_number < 1)
  - fix anon subroutine redefine warnings.
0.0917 2020-10-06
  - fix bug that when a module contains multi packages, Perl Package is not created for after seconds packages
0.0916 2020-10-05
  - SPVM::Util->rand function don't need argument
  - add SPVM::Util->srand static method
  - remove SPVM::Util->random static method
  - add SPVM::Util->RAND_MAX static method
0.0915 2020-10-05
  - add precompile package descriptor
0.0914 2020-09-26
  - Class method is renamed to Static method. This is only SPVM document changing.
  - Matrix modules is removed from SPVM core, and moved to SPVM::AI::Util of CPAN module.
  - Big array test become private tests because not understandable memory error occured in some environment.
0.0913 2020-09-23
  - add SPVM::Matrix::Util
  - SPVM::Matrix::Float methods is moved to SPVM::Matrix::Util