@@ -5,6 +5,9 @@ package SPVM::DoubleList {
   has capacity : ro int;
   has length   : ro int;
   
+  private enum {
+    DEFAULT_CAPACITY = 16,
+  }
   sub new_capacity : SPVM::DoubleList ($capacity : int) {
     my $self = new SPVM::DoubleList;
     unless ($capacity > 0) {
@@ -19,9 +22,16 @@ package SPVM::DoubleList {
     my $self = new SPVM::DoubleList;
     my $length = @$array;
     
-    my $values = new double[$length];
+    my $capacity = 0;
+    if ($length < DEFAULT_CAPACITY()) {
+      $capacity = DEFAULT_CAPACITY();
+    }
+    else {
+      $capacity = $length;
+    }
+    $self->{capacity} = $capacity;
+    my $values = new double[$capacity];
     
-    $self->{capacity} = $length;
     $self->{length} = $length;
     
     memcpyd($values, 0, $array, 0, $length);
@@ -36,9 +46,16 @@ package SPVM::DoubleList {
     unless ($length >= 0) {
       die "length must be more than or equals to zero";
     }
-    $self->{capacity} = $length + 1;
+    my $capacity = 0;
+    if ($length < DEFAULT_CAPACITY()) {
+      $capacity = DEFAULT_CAPACITY();
+    }
+    else {
+      $capacity = $length;
+    }
+    $self->{capacity} = $capacity;
     $self->{length} = $length;
-    $self->{values} = new double[$length];
+    $self->{values} = new double[$capacity];
     return $self;
   }
   
@@ -66,7 +83,7 @@ package SPVM::DoubleList {
       die "Out of range";
     }
     
-    if ($length >= $capacity - 1) {
+    if ($length >= $capacity) {
       $self->_extend;
     }
     
@@ -106,7 +123,7 @@ package SPVM::DoubleList {
     my $length = $self->{length};
     my $capacity = $self->{capacity};
     
-    if ($length >= $capacity - 1) {
+    if ($length >= $capacity) {
       $self->_extend;
     }
     
@@ -133,7 +150,7 @@ package SPVM::DoubleList {
     my $length = $self->{length};
     my $capacity = $self->{capacity};
     
-    if ($length >= $capacity - 1) {
+    if ($length >= $capacity) {
       $self->_extend;
     }
     
