@@ -5,6 +5,9 @@ package SPVM::LongList {
   has capacity : ro int;
   has length   : ro int;
   
+  private enum {
+    DEFAULT_CAPACITY = 16,
+  }
   sub new_capacity : SPVM::LongList ($capacity : int) {
     my $self = new SPVM::LongList;
     unless ($capacity > 0) {
@@ -19,9 +22,16 @@ package SPVM::LongList {
     my $self = new SPVM::LongList;
     my $length = @$array;
     
-    my $values = new long[$length];
+    my $capacity = 0;
+    if ($length < DEFAULT_CAPACITY()) {
+      $capacity = DEFAULT_CAPACITY();
+    }
+    else {
+      $capacity = $length;
+    }
+    $self->{capacity} = $capacity;
+    my $values = new long[$capacity];
     
-    $self->{capacity} = $length;
     $self->{length} = $length;
     
     memcpyl($values, 0, $array, 0, $length);
@@ -36,9 +46,16 @@ package SPVM::LongList {
     unless ($length >= 0) {
       die "length must be more than or equals to zero";
     }
-    $self->{capacity} = $length + 1;
+    my $capacity = 0;
+    if ($length < DEFAULT_CAPACITY()) {
+      $capacity = DEFAULT_CAPACITY();
+    }
+    else {
+      $capacity = $length;
+    }
+    $self->{capacity} = $capacity;
     $self->{length} = $length;
-    $self->{values} = new long[$length];
+    $self->{values} = new long[$capacity];
     return $self;
   }
   
@@ -65,7 +82,7 @@ package SPVM::LongList {
       die "Out of range";
     }
     
-    if ($length >= $capacity - 1) {
+    if ($length >= $capacity) {
       $self->_extend;
     }
     
@@ -105,7 +122,7 @@ package SPVM::LongList {
     my $length = $self->{length};
     my $capacity = $self->{capacity};
     
-    if ($length >= $capacity - 1) {
+    if ($length >= $capacity) {
       $self->_extend;
     }
     
@@ -132,7 +149,7 @@ package SPVM::LongList {
     my $length = $self->{length};
     my $capacity = $self->{capacity};
     
-    if ($length >= $capacity - 1) {
+    if ($length >= $capacity) {
       $self->_extend;
     }
     
