@@ -5,6 +5,9 @@ package SPVM::ShortList {
   has capacity : ro int;
   has length   : ro int;
   
+  private enum {
+    DEFAULT_CAPACITY = 16,
+  }
   sub new_capacity : SPVM::ShortList ($capacity : int) {
     my $self = new SPVM::ShortList;
     unless ($capacity > 0) {
@@ -20,9 +23,16 @@ package SPVM::ShortList {
     unless ($length >= 0) {
       die "length must be more than or equals to zero";
     }
-    $self->{capacity} = $length + 1;
+    my $capacity = 0;
+    if ($length < DEFAULT_CAPACITY()) {
+      $capacity = DEFAULT_CAPACITY();
+    }
+    else {
+      $capacity = $length;
+    }
+    $self->{capacity} = $capacity;
     $self->{length} = $length;
-    $self->{values} = new short[$length];
+    $self->{values} = new short[$capacity];
     return $self;
   }
 
@@ -30,9 +40,16 @@ package SPVM::ShortList {
     my $self = new SPVM::ShortList;
     my $length = @$array;
     
-    my $values = new short[$length];
+    my $capacity = 0;
+    if ($length < DEFAULT_CAPACITY()) {
+      $capacity = DEFAULT_CAPACITY();
+    }
+    else {
+      $capacity = $length;
+    }
+    $self->{capacity} = $capacity;
+    my $values = new short[$capacity];
     
-    $self->{capacity} = $length;
     $self->{length} = $length;
     
     memcpys($values, 0, $array, 0, $length);
@@ -65,7 +82,7 @@ package SPVM::ShortList {
       die "Out of range";
     }
     
-    if ($length >= $capacity - 1) {
+    if ($length >= $capacity) {
       $self->_extend;
     }
     
@@ -105,7 +122,7 @@ package SPVM::ShortList {
     my $length = $self->{length};
     my $capacity = $self->{capacity};
     
-    if ($length >= $capacity - 1) {
+    if ($length >= $capacity) {
       $self->_extend;
     }
     
@@ -131,7 +148,7 @@ package SPVM::ShortList {
     my $length = $self->{length};
     my $capacity = $self->{capacity};
     
-    if ($length >= $capacity - 1) {
+    if ($length >= $capacity) {
       $self->_extend;
     }
     
