@@ -3,6 +3,9 @@ package SPVM::StringList {
   has capacity : ro int;
   has length   : ro int;
   
+  private enum {
+    DEFAULT_CAPACITY = 16,
+  }
   sub new_capacity : SPVM::StringList ($capacity : int) {
     my $self = new SPVM::StringList;
     unless ($capacity > 0) {
@@ -17,9 +20,16 @@ package SPVM::StringList {
     my $self = new SPVM::StringList;
     my $length = @$array;
     
-    my $values = new string[$length];
+    my $capacity = 0;
+    if ($length < DEFAULT_CAPACITY()) {
+      $capacity = DEFAULT_CAPACITY();
+    }
+    else {
+      $capacity = $length;
+    }
+    $self->{capacity} = $capacity;
+    my $values = new string[$capacity];
     
-    $self->{capacity} = $length;
     $self->{length} = $length;
     
     for (my $i = 0; $i < $length; $i++) {
@@ -36,9 +46,16 @@ package SPVM::StringList {
     unless ($length >= 0) {
       die "length must be more than or equals to zero";
     }
-    $self->{capacity} = $length + 1;
+    my $capacity = 0;
+    if ($length < DEFAULT_CAPACITY()) {
+      $capacity = DEFAULT_CAPACITY();
+    }
+    else {
+      $capacity = $length;
+    }
+    $self->{capacity} = $capacity;
     $self->{length} = $length;
-    $self->{values} = new string[$length];
+    $self->{values} = new string[$capacity];
     return $self;
   }
   
@@ -50,7 +67,7 @@ package SPVM::StringList {
       die "Out of range";
     }
     
-    if ($length >= $capacity - 1) {
+    if ($length >= $capacity) {
       $self->_extend;
     }
     
@@ -90,7 +107,7 @@ package SPVM::StringList {
     my $length = $self->{length};
     my $capacity = $self->{capacity};
     
-    if ($length >= $capacity - 1) {
+    if ($length >= $capacity) {
       $self->_extend;
     }
     
@@ -117,7 +134,7 @@ package SPVM::StringList {
     my $length = $self->{length};
     my $capacity = $self->{capacity};
     
-    if ($length >= $capacity - 1) {
+    if ($length >= $capacity) {
       $self->_extend;
     }
     
